# Syntellix

./: .gitignore  README.md
syntellix-api/: .env  pyproject.toml
syntellix-api/syntellix_api/: app.py  run_rq_worker.py  start_rq_worker.sh
syntellix-api/syntellix_api/configs/: __init__.py  app_config.py
syntellix-api/syntellix_api/configs/hosted_service/: __init__.py
syntellix-api/syntellix_api/configs/middleware/: __init__.py
syntellix-api/syntellix_api/configs/system/: __init__.py
syntellix-api/syntellix_api/contexts/: __init__.py
syntellix-api/syntellix_api/controllers/: api_errors.py  errors.py
syntellix-api/syntellix_api/controllers/console/: __init__.py  account_api.py  login.py  login_api.py  sys_init.py  sys_init_api.py
syntellix-api/syntellix_api/extensions/: ext_celery.py  ext_database.py  ext_redis.py  ext_rq.py  ext_storage.py
syntellix-api/syntellix_api/extensions/storage/: aliyun_storage.py  base_storage.py  local_storage.py  minio_storage.py
syntellix-api/syntellix_api/libs/: external_api.py  helper.py  login.py  passport.py  password.py  rate_limit.py
syntellix-api/syntellix_api/llm/: llm_factory.py
syntellix-api/syntellix_api/llm/prompts/: agent_prompt.py  rag_prompt.py
syntellix-api/syntellix_api/migrations/versions/: 1afe3a3c0aec_.py  2fc60f57a788_.py  8c2d50aca250_.py  9bb257773a67_.py  a8188ba98d59_.py  b00f881359f4_.py  ba5b69368858_.py  c078dda10fa4_.py  c0c7190e3e20_.py  c928c92e5616_change_avatar_field_to_longtext.py  c9872bbb92dc_.py  d7948fddcb74_.py
syntellix-api/syntellix_api/models/: account.py  account_model.py  agent_model.py  chat_model.py  dataset_model.py
syntellix-api/syntellix_api/rag/app/: audio.py  book.py  email_app.py  knowledge_graph.py  laws.py  manual.py  naive.py  one.py  paper.py  picture.py  presentation.py  qa.py  resume.py  table.py
syntellix-api/syntellix_api/rag/ext/: contextual_rag.py
syntellix-api/syntellix_api/response/: account_response.py  agent_response.py  chat_response.py  document_response.py  file_response.py  knowledge_base_response.py
syntellix-api/syntellix_api/services/: account_service.py  agent_service.py  chat_service.py  dataset_service.py  file_service.py  rag_service.py
syntellix-api/syntellix_api/tasks/: __init__.py  chat_tasks.py  document_chunck_task.py  document_processing.py
syntellix-api/tests/: test.py
(+102 files in other folders)
