[tool.poetry]
name = "syntellix-api"
version = "0.1.0"
description = ""
authors = ["liangbing <bing.liang@relxintl.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-cors = "^5.0.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
flask-login = "^0.6.3"
flask-compress = "^1.15"
flask-sqlalchemy = "^3.1.1"
flask-restful = "^0.3.10"
jwt = "^1.3.1"
flask-migrate = "^4.0.7"
python-dotenv = "^1.0.1"
oss2 = "^2.19.0"
redis = "^5.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"