[tool.poetry]
name = "syntellix-api"
version = "0.1.0"
description = ""
authors = ["liangbing <bing.liang@relxintl.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-cors = "^5.0.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
flask-login = "^0.6.3"
flask-compress = "^1.15"
flask-sqlalchemy = "^3.1.1"
flask-restful = "^0.3.10"
flask-migrate = "^4.0.7"
python-dotenv = "^1.0.1"
oss2 = "^2.19.0"
redis = "^5.0.8"
pymysql = "^1.1.1"
pyjwt = "^2.9.0"
celery = "^5.4.0"
tika = "^2.6.0"
markdown = "^3.7"
xgboost = "^2.1.1"
torch = "^2.4.1"
pdfplumber = "^0.11.4"
pypdf = "^5.0.0"
numpy = "^2.1.1"
cachetools = "^5.5.0"
ruamel-yaml = "^0.18.6"
huggingface-hub = "^0.25.0"
demjson3 = "^3.0.6"
xpinyin = "^0.7.6"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
readability = "^0.3.1"
chardet = "^5.2.0"
html-text = "^0.6.2"
onnxruntime = "^1.19.2"
nltk = "^3.9.1"
pypdf2 = "^3.0.1"
tiktoken = "^0.7.0"
datrie = "^0.8.2"
hanziconv = "^0.3.2"
python-pptx = "^1.0.2"
openai = "^1.46.0"
dashscope = "^1.20.10"
anthropic = "^0.34.2"
flagembedding = "^1.2.11"
bcembedding = "^0.1.5"
ormsgpack = "^1.5.0"
elasticsearch = "^8.15.1"
nest-asyncio = "^1.6.0"
roman-numbers = "^1.0.2"
word2number = "^1.1"
cn2an = "^0.5.22"
python-docx = "^1.1.2"
opencv-python = "^4.10.0.84"
shapely = "^2.0.6"
pyclipper = "^1.3.0.post5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"